Revert "Savelistener (#4)"
This reverts commit 628bd92865a8834c87adb929328bd20f626354b9.