@@ -1,17 +1,16 @@
 package view.planning;
 
-import model.Thing;
 import view.planning.components.JDateTimePicker;
-import view.planning.modelview.ThingView;
 import view.planning.modelview.UserView;
 
 import javax.swing.*;
 import java.awt.*;
 import java.text.DateFormat;
 import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.util.*;
+import java.util.Date;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 
 public class EventPlanningWindow extends JFrame implements EventPlanning {
     private enum Column {
@@ -113,26 +112,12 @@ public class EventPlanningWindow extends JFrame implements EventPlanning {
 
     @Override
     public LocalDateTime getEventDate() {
-        Date tempDate = dateTimePicker.getDate();
-        LocalDateTime eventDateTime = LocalDateTime.ofInstant(tempDate.toInstant(), ZoneId.systemDefault());
-        return eventDateTime;
+        return LocalDateTime.now(); //TODO replace with datepicker
     }
 
     @Override
     public List<UserView> getUsers() {
-        List<UserView> listOfUsers = new ArrayList<>();
-        for(Map.Entry<String, DefaultListModel<String>> entry: dataMap.entrySet()) {
-            List<ThingView> listOfThingViews = new ArrayList<>();
-            List<Object> listOfThingViewsAsObjects = Arrays.asList(entry.getValue().toArray());
-
-            for(Object thingViewAsObject: listOfThingViewsAsObjects){
-                ThingView thingView = new ThingView(thingViewAsObject.toString());
-                listOfThingViews.add(thingView);
-            }
-            UserView tempUserView = new UserView(entry.getKey(), listOfThingViews);
-            listOfUsers.add(tempUserView);
-        }
-        return listOfUsers;
+        return List.of(); //TODO return userviews with things
     }
 
     @Override
